welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:60: error: Unmatched closing brace '}' ignored here
}
^